the component skeleton

--- a/meme_generator/src/index.html
+++ b/meme_generator/src/index.html
@@ -9,8 +9,7 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     </head>
     <body>
-        <h1>Init</h1>
-        <div id="insertReactHere"></div>
+        <div id="app"></div>
 
     </body>
 </html>
