--- a/meme_generator/src/index.html
+++ b/meme_generator/src/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Meme Gen</title>
+        <title>Meme Generator</title>
         <meta name="author" content="tayeb">
         <link rel="stylesheet" href="style/style.css">
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
