--- a/memory/src/index.html
+++ b/memory/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Memory</title>
+    <link rel="stylesheet" href="style/app.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
-    <h1>Memory</h1>
-    <div id="app"></div>
+        <div id="reactHere"></div>
 </body>
 </html>
