--- a/memory/src/index.html
+++ b/memory/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/app.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <link rel="shortcut icon" href="./images/favicon2.ico" type="image/x-icon">
 </head>
 <body>
         <div id="reactHere"></div>
